@@ -35,6 +35,8 @@ Designer 2.14.0 (2013-XX-XX Markab)
      restored on login and not when UI designer pane is 
      displayed. "Please wait" message on login only dismissed 
      when UI has been built and initialized. (Eric Bariaux)
+   - MODELER-391: Add Domintell connection configuration
+     (Eric Bariaux)
 
 
  Internal:
